--- a/app/src/main/res/layout/activity_add_character.xml
+++ b/app/src/main/res/layout/activity_add_character.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tahastudio.storybuilder.ShowStory">
+    tools:context=".activities.ShowStory">
 
     <ScrollView
         android:fillViewport="true"
