--- a/app/src/main/res/layout/activity_create_story.xml
+++ b/app/src/main/res/layout/activity_create_story.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tahastudio.storybuilder.ShowStory">
+    tools:context=".activities.ShowStory">
 
     <HorizontalScrollView
         android:id="@+id/tab_layout_scroll"
