--- a/app/src/main/res/layout/story_elements.xml
+++ b/app/src/main/res/layout/story_elements.xml
@@ -1,14 +1,12 @@
 <RelativeLayout
-    android:id="@+id/add_event_tab"
+    android:id="@+id/show_elements"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragments.AddEvents">
+    android:orientation="vertical">
 
     <ListView
-        android:id="@+id/event_listview"
+        android:id="@+id/element_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
