--- a/app/src/main/res/menu/menu_save_elements.xml
+++ b/app/src/main/res/menu/menu_save_elements.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ShowStory">
+    tools:context=".activities.ShowStory">
 
     <item android:id="@+id/save"
         android:title="@string/add_an_element"
