--- a/app/src/main/res/layout-land/activity_create_story.xml
+++ b/app/src/main/res/layout-land/activity_create_story.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     android:id="@+id/story_creation_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -11,13 +12,15 @@
 
     <HorizontalScrollView
         android:id="@+id/tab_layout_scroll"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
         android:scrollbars="none">
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:theme="@style/Tabs"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/primary_text_light"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
     </HorizontalScrollView>
