--- a/app/src/main/res/layout/story_elements.xml
+++ b/app/src/main/res/layout/story_elements.xml
@@ -5,9 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/element_listview"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/element_list"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:listSelector="@drawable/big_card_list" />
 
 </RelativeLayout>
