--- a/app/src/main/res/layout/fragment_add_event.xml
+++ b/app/src/main/res/layout/fragment_add_event.xml
@@ -2,11 +2,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/add_location"
+    android:id="@+id/add_event"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ShowStory">
+    tools:context=".activities.Story">
 
     <ScrollView
         android:fillViewport="true"
@@ -23,77 +23,67 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:id="@+id/activity_add_location_top"
+                android:id="@+id/activity_add_event_top"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/add_location_instructions"
+                    android:id="@+id/event_instructions"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_location"
+                    android:drawableStart="@drawable/ic_event"
                     android:drawablePadding="10dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="@string/location_instructions"/>
+                    android:text="@string/event_instructions"/>
             </LinearLayout>
 
             <EditText
-                android:id="@+id/sb_location_name"
+                android:id="@+id/sb_event_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/location_name"
+                android:hint="@string/event_title"
                 android:imeOptions="actionNext"
-                android:inputType="textCapWords"
+                android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
                 android:maxLines="1"
-                android:layout_below="@+id/activity_add_location_top"/>
+                android:layout_below="@id/activity_add_event_top" />
 
             <EditText
-                android:id="@+id/sb_location_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/location_location"
-                android:imeOptions="actionNext"
-                android:inputType="textCapSentences|textMultiLine|textAutoComplete|textAutoCorrect"
-                android:maxLines="1"
-                android:layout_below="@+id/sb_location_name"/>
-
-            <EditText
-                android:id="@+id/sb_location_desc"
+                android:id="@+id/sb_event"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/location_desc"
+                android:hint="@string/event_desc"
                 android:imeOptions="actionNext"
                 android:inputType="textCapSentences|textMultiLine|textAutoComplete|textAutoCorrect"
-                android:layout_below="@+id/sb_location_location"/>
+                android:layout_below="@+id/sb_event_name" />
 
             <EditText
-                android:id="@+id/sb_location_importance"
+                android:id="@+id/sb_event_characters"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/location_importance"
+                android:hint="@string/event_characters"
                 android:imeOptions="actionNext"
                 android:inputType="textCapSentences|textMultiLine|textAutoComplete|textAutoCorrect"
-                android:layout_below="@+id/sb_location_desc"/>
+                android:layout_below="@+id/sb_event" />
 
             <EditText
-                android:id="@+id/sb_location_events"
+                android:id="@+id/sb_event_summary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/location_events"
+                android:hint="@string/event_summary"
                 android:imeOptions="actionNext"
                 android:inputType="textCapSentences|textMultiLine|textAutoComplete|textAutoCorrect"
-                android:layout_below="@+id/sb_location_importance"/>
+                android:layout_below="@+id/sb_event_characters" />
 
             <EditText
-                android:id="@+id/sb_location_notes"
+                android:id="@+id/sb_event_notes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/location_notes"
+                android:hint="@string/event_notes"
                 android:imeOptions="actionNext"
                 android:inputType="textCapSentences|textMultiLine|textAutoComplete|textAutoCorrect"
-                android:layout_below="@+id/sb_location_events"/>
+                android:layout_below="@id/sb_event_summary" />
         </RelativeLayout>
     </ScrollView>
 
@@ -102,15 +92,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@color/white"
-        android:gravity="end|bottom"
+        android:gravity="bottom|end"
         android:layout_alignParentBottom="true">
 
-            <Button
-                android:id="@+id/add_the_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="?android:attr/borderlessButtonStyle"
-                android:text="@string/OK" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/add_the_event"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/borderlessButtonStyle"
+            android:text="@string/OK" />
+    </LinearLayout>
 
 </RelativeLayout>
