Implement RecyclerView/CardView across all activities/fragments

--- a/app/src/main/res/values/quotes.xml
+++ b/app/src/main/res/values/quotes.xml
@@ -100,7 +100,7 @@
         <item>"I go silent so I can write. When my tongue is wagging my fingers are silent." ― Sonia Rumzi</item>
         <item>"Biting my truant pen, beating myself for spite: "Fool!" said my muse to me, "look in thy heart, and write." ― Philip Sidney</item>
         <item>"Make no mistake, those who write long books have nothing to say. Of course those who write short books have even less to say." ― Mark Z. Danielewski</item>
-        <item>"“I never waited for my Irish Cream coffee to be the right temperature, with a storm happening outside and my fireplace crackling$#8230; I wrote every day, at home, in the office, whether I felt like it or not, I just did it." ― Stephen J. Cannell</item>
+        <item>"“I never waited for my Irish Cream coffee to be the right temperature, with a storm happening outside and my fireplace crackling. I wrote every day, at home, in the office, whether I felt like it or not, I just did it." ― Stephen J. Cannell</item>
         <item>"Hold your pen and spare your voice." ― Dorothy Parker</item>
         <item>"We do not wait for inspiration. We work because we've jolly well got to. But when all is said and done, we toil at this particular job because it's turned out to be our particular job, and in a weird sort of way I suppose we may be said to like it." ― Ngaio Marsh</item>
         <item>"The purpose of a writer is to keep civilisation from destroying itself." ― Bernard Malamud</item>
