--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -89,5 +89,17 @@
             android:layout_height="wrap_content"
             fab:fab_title="@string/add_event"
             android:clickable="true" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/plots"
+            android:theme="@style/Fab"
+            android:src="@drawable/ic_event"
+            fab:fab_colorNormal="@color/primary"
+            fab:fabSize="mini"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="@string/add_plot"
+            android:clickable="true" />
+
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </RelativeLayout>
