--- a/app/src/main/res/drawable/ic_event.xml
+++ b/app/src/main/res/drawable/ic_event.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M23,8c0,1.1 -0.9,2 -2,2 -0.18,0 -0.35,-0.02 -0.51,-0.07l-3.56,3.55c0.05,0.16 0.07,0.34 0.07,0.52 0,1.1 -0.9,2 -2,2s-2,-0.9 -2,-2c0,-0.18 0.02,-0.36 0.07,-0.52l-2.55,-2.55c-0.16,0.05 -0.34,0.07 -0.52,0.07s-0.36,-0.02 -0.52,-0.07l-4.55,4.56c0.05,0.16 0.07,0.33 0.07,0.51 0,1.1 -0.9,2 -2,2s-2,-0.9 -2,-2 0.9,-2 2,-2c0.18,0 0.35,0.02 0.51,0.07l4.56,-4.55C8.02,9.36 8,9.18 8,9c0,-1.1 0.9,-2 2,-2s2,0.9 2,2c0,0.18 -0.02,0.36 -0.07,0.52l2.55,2.55c0.16,-0.05 0.34,-0.07 0.52,-0.07s0.36,0.02 0.52,0.07l3.55,-3.56C19.02,8.35 19,8.18 19,8c0,-1.1 0.9,-2 2,-2s2,0.9 2,2z"/>
+<vector android:height="24dp" android:viewportHeight="79.536"
+    android:viewportWidth="79.536" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#010002" android:pathData="M59.09,45.86l20.44,-13.1L59.79,30.67L65.12,7.7L51.12,22.19l-3.89,-16.37l-5.89,15.28L25.32,0.46l5.06,25.86l-14.26,-3.17c0,0 4.32,8.28 6.74,13.27L0,34.82l20.68,12.09l-5.94,6.11l9.61,-1.76l-6.81,24.1l20.26,-16.93l5.24,13.09l5.41,-10.47l17.43,18.02l-8.7,-24.14l19.14,1.94L59.09,45.86z"/>
 </vector>
