--- a/app/src/main/res/layout/fragment_add_plot.xml
+++ b/app/src/main/res/layout/fragment_add_plot.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/add_plot_instructions"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_character"
+                    android:drawableStart="@drawable/ic_plot"
                     android:drawablePadding="10dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="@string/plot_instructions" />
