--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="primary_header">#CFD8DC</color>
     <color name="primary_light">#C8E6C9</color>
     <color name="primary_text_light">#F5F5F5</color>
-    <color name="accent">#388E3C</color>
+    <color name="accent">#388e3c</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#388E3C</color>
